syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "Vector.proto";

// CmdId: 1616
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarDieAnimationEndReq {
	uint64 die_guid = 14;
	uint32 skill_id = 4;
	Vector reborn_pos = 13;
}
